# mac-resource-monitor

./: CLAUDE.md  CMakeLists.txt  README.md  compile-run.sh
src/: main.cpp
src/metrics/: cpu_metrics.cpp  cpu_metrics.h  fan_metrics.cpp  fan_metrics.h  memory_metrics.cpp  memory_metrics.h  power_metrics.cpp  power_metrics.h  thermal_metrics.cpp  thermal_metrics.h
src/utils/: iokit_helper.cpp  iokit_helper.h
